--- a/README.ME
+++ b/README.ME
@@ -1,4 +1,4 @@
 # Site da loja do Leão do kpop 
 
-<span>Link de acesso ao demonstrativo, hospedado no Github IO</span>
+Link de acesso ao demonstrativo, hospedado no Github IO
  https://gmdott.github.io/ldkpp_shop/
